--- a/main.css
+++ b/main.css
@@ -1,22 +1,20 @@
-
-body{
-    background: white;
+body {
+    background: gray;
     margin: 0;
     padding: 0;
     color: white;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     background-size: 100% auto;
     padding-top: 8rem;
     overflow-x: hidden;
-
 }
-
 
 h2 {
     margin: 0;
 }
 
-main{
+main {
     height: 5000px;
 }
 
@@ -24,10 +22,10 @@ main{
     position: fixed;
     inset: 0;
     z-index: 1000;
-    --r: 0px;          
-    --x: 50%;             
-    --y: 50%;             
-    --dim: rgb(0, 18, 13);
+    --r: 0px;
+    --x: 50%;
+    --y: 50%;
+    --dim: rgb(0, 0, 0);
 
     background: radial-gradient(
         circle var(--r) at var(--x) var(--y),
@@ -35,4 +33,3 @@ main{
         var(--dim) 100%
     );
 }
-
